--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ceres-Protocol",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "git" : "git add . & git cz"
   },
   "repository": {
     "type": "git",
