--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "git": "git add . & git cz",
+    "git add": "git add . & git cz",
     "changelog": "npx standard-version"
   },
   "repository": {
