--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "truffle": "^5.3.14"
   }
 }
