--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ceres-Protocol",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "truffle test",
     "git add": "git add . & git cz",
     "changelog": "npx standard-version"
   },
