--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Ceres-Protocol",
   "main": "index.js",
   "scripts": {
+    "compile" : "rm -rf build & truffle compile --all",
+    "clean_build_migrate_all": "rm -rf build & truffle compile --all & truffle migrate --network development --skip-dry-run --reset",
     "test": "truffle test",
     "git add": "git add . & git cz",
     "changelog": "npx standard-version"
