--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,14 @@
 bin-debug/
 bin-release/
 node_modules/
-build/
 [Oo]bj/
 [Bb]in/
+build/
+build
 
 # Other files and folders
 .settings/
+
 
 # Executables
 *.swf
@@ -18,3 +20,5 @@ build/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+
+build
