--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@ bin-release/
 node_modules/
 [Oo]bj/
 [Bb]in/
-build/
-build
+build/*
 
 # Other files and folders
 .settings/
@@ -20,5 +19,3 @@ build
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
-
-build
