feat(contracts/css/css.sol migrations/2_deploy_contracts.js test/css.test.js package.json): css.sol
1. created css.sol 2. update migrations/2_deploy_contracts.js, 3 [created] css.test.js; 4: update
package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "compile": "rm -rf build & truffle compile --all",
     "migration": "truffle migrate --network development --skip-dry-run --reset",
     "clean_build_migrate_all": "rm -rf build & truffle compile --all & truffle migrate --network development --skip-dry-run --reset",
-    "testSingleFile": "truffle test test/ceres.test.js",
+    "testSingleFile": "truffle test test/css.test.js",
     "test": "truffle test",
     "git add": "git add . & git cz",
     "changelog": "npx standard-version"
