test(test/uniswapv2pair_ceres_weth.test.js): [ADD][TEST SCRIPTS]: ADD 'check pair_instance_CERES_WETH.name.call(), its value is "Uniswap V2"'

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-conventional-changelog",
+      "maxHeaderWidth": 1000
     }
   },
   "dependencies": {
