--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "compile": "rm -rf build & truffle compile --all",
     "migration": "truffle migrate --network development --skip-dry-run --reset",
     "clean_build_migrate_all": "rm -rf build & truffle compile --all & truffle migrate --network development --skip-dry-run --reset",
-    "testSingleFile": "truffle test test/SwapToPrice.test.js",
+    "testSingleFile": "truffle test test/ceres_P2.test.js",
     "test": "truffle test",
     "git add": "git add . & git cz",
     "changelog": "npx standard-version"
