--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ceres-Protocol",
   "main": "index.js",
   "scripts": {
-    "compile": "rm -rf build & truffle compile --all",
+    "compile": "truffle compile --all",
+    "compile_with_rm" : "rm -rf build & truffle compile --all",
     "migration": "truffle migrate --network development --skip-dry-run --reset",
     "migration_bsc": "truffle migrate --network testnet --skip-dry-run --reset",
     "clean_build_migrate_all": "rm -rf build & truffle compile --all & truffle migrate --network development --skip-dry-run --reset",
