--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "migration": "truffle migrate --network development --skip-dry-run --reset",
     "migration_bsc": "truffle migrate --network testnet --skip-dry-run --reset",
     "clean_build_migrate_all": "rm -rf build & truffle compile --all & truffle migrate --network development --skip-dry-run --reset",
-    "testSingleFileP2": "truffle test test/CSSWETHLPPool_P2.js",
+    "testSingleFile": "truffle test test/CeresPoolInvestorForV2.test.js",
     "test": "truffle test",
     "git add": "git add . & git cz",
     "changelog": "npx standard-version"
