--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "migration_bsc": "truffle migrate --network testnet --skip-dry-run --reset",
     "clean_build_migrate_all": "rm -rf build & truffle compile --all & truffle migrate --network development --skip-dry-run --reset",
     "testSingleFile": "truffle test test/CeresPoolInvestorForV2.test.js",
+    "testSingleFile_CSSAMO": "truffle test test/CSS_AMO.test.js",
     "test": "truffle test",
     "git add": "git add . & git cz",
     "changelog": "npx standard-version"
