--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "compile" : "rm -rf build & truffle compile --all",
     "migration": "truffle migrate --network development --skip-dry-run --reset",
     "migration_bsc": "truffle migrate --network testnet --skip-dry-run --reset",
-    "clean_build_migrate_all": "rm -rf build & truffle compile --all & truffle migrate --network development --skip-dry-run --reset",
-    "testSingleFile": "truffle test test/CeresPoolInvestorForV2.test.js",
+    "clean_build_migrate_all": "rm -rf build & truffle compile --all & truffle migrate --network development --skip-dry-run --reset", 
     "testSingleFile_CSSAMO": "truffle test test/CSS_AMO.test.js",
     "test": "truffle test",
     "git add": "git add . & git cz",
+    "[TODO][LATER] testSingleFile": "truffle test test/CeresPoolInvestorForV2.test.js",
     "changelog": "npx standard-version"
   },
   "repository": {
