--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "migration": "truffle migrate --network development --skip-dry-run --reset",
     "migration_bsc": "truffle migrate --network testnet --skip-dry-run --reset",
     "clean_build_migrate_all": "rm -rf build & truffle compile --all & truffle migrate --network development --skip-dry-run --reset", 
-    "testSingleFile_CSSAMO": "truffle test test/CSS_AMO.test.js",
+    "testSingleFile_Comp": "truffle test test/Comp.test.js",
     "test": "truffle test",
     "git add": "git add . & git cz",
     "[TODO][LATER] testSingleFile": "truffle test test/CeresPoolInvestorForV2.test.js",
